Fix issue where Verzik mistakes were not being detected